--- a/src/client/scss/vmware/components/home-hero.scss
+++ b/src/client/scss/vmware/components/home-hero.scss
@@ -5,6 +5,7 @@
 
 @import "../base/variables";
 @import "../base/_transitions";
+@import "../base/buttons";
 @import "~bootstrap/scss/mixins/breakpoints";
 $carousel-indicator-height: 20px;
 
@@ -243,6 +244,16 @@ $carousel-indicator-height: 20px;
         @media only screen and (max-width: 991.98px) {
           padding: 0;
           max-width: none;
+        }
+      }
+
+      .theme-banner-default{
+        >picture{
+          img{
+            left: 0 ;
+            right: 0 ;
+            margin: 0 auto;
+          }
         }
       }
     }
@@ -615,6 +626,72 @@ $carousel-indicator-height: 20px;
     }
   }
 
+  .theme-banner-light {
+    .banner-cta-wrapper {
+      .banner-cta {
 
+
+
+
+
+        &:nth-of-type(1) {
+
+
+          a {
+            color: white;
+            text-decoration: none;
+            @extend .bttn;
+          @include primary-button;
+          // margin-right: 30px;
+           &:hover {
+            @include primary-hover;
+
+            a {
+              color: $color-primary ;
+            }
+          }
+
+          &:after {
+            @include button-after;
+          }
+          }
+
+
+
+        }
+
+        &:nth-of-type(2) {
+
+          a {
+
+            text-decoration: none;
+            @extend .bttn;
+          @include secondary-button;
+          &:hover {
+            @include secondary-hover;
+
+            a {
+              color: $color-white ;
+            }
+          }
+
+          &:after {
+            @include button-after;
+          }
+
+          }
+
+
+        }
+
+        @media screen and (max-width: map-get($grid-breakpoints, md) - 1) {
+          &:nth-of-type(1) {
+            margin-right: 0;
+          }}
+
+
+      }
+    }
+  }
 
 }
